# virtual-desktop-assistant

./: .gitignore  AGENTS.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: main-prerelease.yml  release-installer.yml  versioned-release.yml
assets/dipsy/: manifest.json
dipsy_dolphin/: __main__.py
dipsy_dolphin/actions/: executor.py  models.py  registry.py
dipsy_dolphin/core/: autonomy.py  brain.py  controller.py  controller_models.py  dialogue.py  emotion.py  memory.py  models.py  scenes.py
dipsy_dolphin/desktop/: __init__.py  backend.py  (+3 more)
docs/: architecture.md  desktop-control-smoke.md  product-brief.md  rendering-decision.md  windows-install.md
prompts/: README.md
scripts/: __init__.py  versioning.py  windows_build.py
src/: __init__.py  app.py  brain.py  storage.py
tests/: README.md  test_action_executor.py  test_action_registry.py  test_animation_state_machine.py  test_app_routines.py  test_autonomy.py  test_brain.py  test_bubble_layout.py  test_character_renderer.py  test_character_widget.py  test_controller.py  test_desktop_backend.py  test_dialogue_animation_sync.py  test_dialogue_presenter.py  test_emotion.py  test_llm_config.py  test_memory.py  test_memory_store.py  test_presentation_controller.py  test_presentation_policy.py  test_profile_store.py  test_prompt_builder.py  test_response_parser.py  test_runtime_catalog.py  test_scenes.py  test_ui_execution.py  test_versioning.py  test_voice_retro.py  test_voice_service.py  test_windows_build.py  test_windows_speech_backend.py
vda/: __init__.py  app.py  brain.py  models.py
(+45 files in other folders)
