[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "dipsy-dolphin"
version = "0.1.0b1"
description = "Playful Windows desktop assistant prototype."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pyside6>=6.8,<7",
]

[project.scripts]
dipsy-dolphin = "dipsy_dolphin.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<0.12",
]
packaging = [
    "pyinstaller>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dipsy_dolphin"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.uv]
default-groups = ["dev"]
